--- a/leanpkg.toml
+++ b/leanpkg.toml
@@ -1,8 +1,9 @@
 [package]
 name = "q_denom"
 version = "0.1"
-lean_version = "leanprover-community/lean:3.32.0"
+lean_version = "leanprover-community/lean:3.26.0"
 path = "src"
 
 [dependencies]
-mathlib = {git = "https://github.com/leanprover-community/mathlib", rev = "d869256e099ff9cf60dd1907814183ed822106b8"}
+mathlib = {git = "https://github.com/leanprover-community/mathlib", rev = "33483a3de6d91066e0fb9efd6aa4c0275d7ac44c"}
+lean-gptf = {git = "https://github.com/jesse-michael-han/lean-gptf", rev = "68b128d520e0f41ef5b5c96d5a234c3ccfa0b89f"}
